[tool.poetry]
name = "nekro-plugin-report"
version = "0.1.0"
description = "偷偷向管理员打小报告(划"
authors = ["Zaxpris <zaxpris@qq.com>"]
readme = "README.md"
packages = []
repository = "https://github.com/zxjwzn/nekro-plugin-report"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
nekro-agent = ">=1.0.0a10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# priority = "primary"

[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
